AWS Three-Tier Architecture using Terraform/alb.tf
resource "aws_lb" "alb" {

  name               = "three-tier-alb"
  internal           = false
  load_balancer_type = "application"

  security_groups = [
    aws_security_group.alb_sg.id
  ]

  subnets = [
    aws_subnet.public1.id,
    aws_subnet.public2.id
  ]
}
resource "aws_lb_target_group" "tg" {

  name = "app-target"

  port = 80

  protocol = "HTTP"

  vpc_id = aws_vpc.main.id
}
resource "aws_lb_target_group_attachment" "app1" {

  target_group_arn = aws_lb_target_group.tg.arn

  target_id = aws_instance.app1.id

  port = 80
}
resource "aws_lb_listener" "listener" {

  load_balancer_arn = aws_lb.alb.arn

  port = 80

  protocol = "HTTP"

  default_action {

    type = "forward"

    target_group_arn = aws_lb_target_group.tg.arn
  }
}
